<resources>
    <string name="app_name">Wishlist</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="what">What?</string>
    <string name="when">When?</string>
    <string name="why">Why?</string>
    <string name="where">Where?</string>
    <string name="how_much">How much?</string>
    <string name="observation">Observation</string>
    <string name="what_error">What error message!</string>
    <string name="when_error">When error message!</string>
    <string name="why_error">Why error message!</string>
    <string name="where_error">Where error message!</string>
    <string name="how_much_error">How much error message!</string>
    <string name="pick_priority">Why i need it?</string>
    <string name="title_widget_current_month">Wishlist Current Month</string>
    <string name="title_widget_detail">Wishlist Details</string>
    <string name="widget_current_month_count">%d Wishes</string>
    <string name="empty_wish_list">No Wish Available</string>
    <string name="drawer_login">Login</string>
    <string name="drawer_logout">Logout</string>
    <string name="default_username">Username</string>
    <string name="title_detail_edit_mode">Edit Wish</string>
    <string name="title_detail_new_mode">New Wish</string>
    <string name="action_detail_delete">Delete</string>
    <string name="message_detail_delete">Do you really want to delete this wish?</string>
    <string name="username">Username</string>
    <string name="content_description_select_photo">Select photo</string>
    <string name="content_description_when">when?</string>
    <string name="content_description_why">Why?</string>
    <string name="content_description_where">Where?</string>
    <string name="content_description_wish_photo">Wish photo</string>
    <string name="content_description_widget_icon">Widget icon</string>
</resources>
